# cgra4ml

./: .gitignore  .gitmodules  .svlint.toml  .svls.toml  Dockerfile  Makefile  README.md  cgra4ml.core  fusesoc.conf  mac_asic.sv  pyproject.toml
c/: model.h  runtime.h
deepsocflow/: __init__.py  hardware.py
docs/: requirements.txt
flow/: config.tcl  fpga.tcl  gen_fpga_ip.tcl  zynq_bd.tcl
ibex-soc/: .gitignore  Dockerfile  Makefile  check_output.py  fusesoc.conf  python-requirements.txt  wbx.elf  wbx.vmem
other/: vitis_one_dark_pro.xml
params/: params.sv  params.svh  params.v  params_calc.svh  params_input.svh
projects/: build.tcl  build_conv.tcl  build_dma.tcl  build_integration.tcl  build_lrelu.tcl  build_max.tcl  build_sys.tcl
py/: tiling.ipynb  training.py
rtl/: axis_accelerator_asic.v  axis_conv_engine.sv  axis_dw_bank.sv  axis_input_pipe.sv  axis_input_pipe.v  axis_out_shift.sv  axis_pixels.sv  axis_pixels_dw.sv  axis_pixels_pipe.sv  axis_pixels_shift.sv  axis_register.sv  axis_weight_rotator.sv  conv_engine.sv  counter.sv  dnn_engine.v  n_delay.sv  out_ram_switch.sv  pad_filter.sv  proc_element.sv  proc_engine.sv  register.v  skid_buffer.sv
run/: config_hw.svh  dddd_model.py  example.py  ibex_test.py  jettagger.py  matmul.py  param_test.py  part.py  pointnet.py  qkeras_translate.py  resnet18.py  resnet50.py  resnet_50.py  stuck.py
src/: FIFO.v  LReLU_AXIS.v  LReLU_block.v  T_reg.v  T_reg_tb.v  always_valid_cyclic_bram.sv  always_valid_cyclic_bram_tb.sv  axis_accelerator.v  axis_accelerator_tb.sv  axis_conv_engine.sv  axis_conv_engine.v  conv.py  (+80 more)
(+523 files in other folders)
