[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deepsocflow"
authors = [{name = "Abarajithan G", email = "abarajithan07@gmail.com"}, {name = "Zhenghua Ma", email = "zhm007@ucsd.edu"}]
version = "0.0.1"
description = "Your DNNs to FPGA/ASIC SoCs in minutes!"
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"
repository = "https://github.com/abarajithan11/deepsocflow"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy >= 1.26.2',
    'pyparsing >= 3.0.9',
    'pytest >= 7.4.0',
    'QKeras == 0.9.0',
    'tensorflow == 2.15.0',
    'tensorflow-model-optimization == 0.7.5'
]